[feat] - add junit TemplateConfigTest and PnFreemarkerConfigTest